[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/screens/TrainingScreenImproved.gd" id="1"]
[ext_resource type="Theme" path="res://themes/MobileTheme.tres" id="2"]

[node name="TrainingScreenImproved" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Header" type="PanelContainer" parent="MainVBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MainVBox/Header"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="MainVBox/Header/HBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back"

[node name="Title" type="Label" parent="MainVBox/Header/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Training"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FatigueInfo" type="VBoxContainer" parent="MainVBox/Header/HBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MainVBox/Header/HBox/FatigueInfo"]
layout_mode = 2
text = "Stamina"
horizontal_alignment = 1

[node name="FatigueBar" type="ProgressBar" parent="MainVBox/Header/HBox/FatigueInfo"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="TabContainer" type="TabContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Technical" type="ScrollContainer" parent="MainVBox/TabContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MainVBox/TabContainer/Technical"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="Physical" type="ScrollContainer" parent="MainVBox/TabContainer"]
visible = false
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MainVBox/TabContainer/Physical"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="Mental" type="ScrollContainer" parent="MainVBox/TabContainer"]
visible = false
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MainVBox/TabContainer/Mental"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="Defensive" type="ScrollContainer" parent="MainVBox/TabContainer"]
visible = false
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MainVBox/TabContainer/Defensive"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="Special" type="ScrollContainer" parent="MainVBox/TabContainer"]
visible = false
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MainVBox/TabContainer/Special"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="Personal" type="ScrollContainer" parent="MainVBox/TabContainer"]
visible = false
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MainVBox/TabContainer/Personal"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="BottomBar" type="PanelContainer" parent="MainVBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MainVBox/BottomBar"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CancelButton" type="Button" parent="MainVBox/BottomBar/HBox"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_vertical = 4
text = "Cancel"

[node name="ConfirmButton" type="Button" parent="MainVBox/BottomBar/HBox"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_vertical = 4
disabled = true
text = "Confirm"